test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/goto_label_main_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(_main)
  ;
  return
  const int(0)
  ;
  identifier(_main)
  :
  return
  const int(1)
  ;
  }
