test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/parenthesized_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  (
  identifier(a)
  )
  ;
  identifier(a)
  :
  return
  const int(0)
  ;
  }
